# truffle-cpp

./: .gitignore  AST-json-structure.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  ast.json  main  pf-main.cpp
src/: c_gen.rs  code_gen.cpp  code_gen.h  dtype_utils.cpp  dtype_utils.h  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.cpp  parser.h  scope_tr.h  scopr_tr.cpp
src-cpp/: code_gen.h  lexer.h  main.cpp  parser.cpp  scope_tr.h
truf-lang/: README.md  main.zig
truf-lang/src/: c_gen.rs  parser.rs  utils.rs
truf-lang/src-cpp/: lexer.cpp
truf-lang/truf-lang-syntax-highlighting/: package.json  truffle-syntax-highlighting-0.0.1.vsix
truf-lang/truf-lang-syntax-highlighting/syntaxes/: truffle.tmLanguage.json
truf-pgo/: .gitignore  Dockerfile  Makefile  README.md  benchmark.py  pyproject.toml  script.ipynb  script.py
truf-pgo/C-DATASET/: BFS.c  b-tree.c  cond-branching.c  dijkstra.c  eigenvalue.c  guass-elimination.c  hashmap.c  heapsort.c  json-parsing.c  knapsack.c  linkedlist.c  lu-decomposition.c  matmul.c  mergesort.c  n-bodies.c  quick-sort.c  sort-by-frequency.c  sparse-matmul.c
truf-pgo/scripts/: benchmark-compiler-flags.py  benchmark-pgo-tools.py  install-deps.sh  utils.py
trufc/: Cargo.toml  TrufC.toml
trufc/scripts/: install.py  py-deps.py
trufc/src/: ai_opt.rs  bolt.rs  build_sys.rs  cli.rs  config.rs  constants.rs  gcc.rs  llvm_pgo.rs  main.rs  safety.rs  utils.rs  valgrind.rs
truffle/: main.tr
