[project]
name = "truf-pgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "ollama>=0.3.3",
    "polars>=1.12.0",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "uvicorn>=0.32.0",
]
