[package]
name = "trufc"
version = "0.0.6"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
home = "0.5.9"
once_cell = "1.20.2"
quick-xml = "0.37.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
toml = "0.8.19"
